# merge-solver

./: README.md  compose.yaml
api/: .air.toml  Dockerfile  go.mod  go.sum
api/cmd/app/: main.go
api/handlers/openAI/: openAI.go
api/internal/openAI/: openAI.go
cli/: Cargo.toml  Dockerfile  new.rs  old.rs  output.txt
cli/src/: file_operations.rs  http.rs  main.rs
