[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dialoguer = "0.11.0"
clap = { version = "4.5.4", features = ["derive"] }
difference = "2.0.0"
colored = "2.0.0"
anyhow = "1.0.82"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.0.1", features = ["full"] }
crossterm = "0.27.0"
